# featurizer

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  astro.config.mjs  justfile  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: pages.yml  release.yml  test.yml
benchmarks/: __init__.py  __main__.py  _db.py  bench.py  bridge_workloads.py  capture_golden.py  fanout_report.py  final_matrix.py  preagg_cases.py  render_v100_pages.py
docs/: deepdive.org  feature-gap-analysis.org  feature-visualization.org  featurizer-overview.org  peer-group-model-alternatives.org  primitives-reference.md
docs/adr/: 0001-phi-bridge-precompute-causal-boundary.md  0002-recursive-cte-vs-apache-age.md  0003-bridge-orchestration-boundary.md  0004-peer-group-categorical-model.md  0005-column-group-sharding.md  0006-temp-table-materialization.md  0007-direct-categorical-fixed-vocabulary.md  0008-relationship-naming-and-ambiguity.md  0009-correlated-subquery-aggregator-scaling.md  0010-set-based-preaggregation.md  0011-domain-guarded-math-transformers.md  0012-set-based-two-window-drift.md  0013-analyze-as-of-dates.md  0014-multi-column-bridge-and-temporal-snapshots.md  0015-v1-api-stability-commitment.md
docs/temporal-features/: gap-vs-featurizer.org  temporal-feature-taxonomy.org
docs/text-network-features/: temporal-features-network-text.org
examples/: README.md  _db.py
examples/01-basic-aggregations/: README.md  config.yaml  create_data.py  run_example.py  tutorial.ipynb
examples/02-temporal-joins/: README.md  config.yaml  create_data.py  run_example.py  tutorial.ipynb
examples/03-deep-nesting/: README.md  config.yaml  create_data.py  run_example.py  tutorial.ipynb
examples/04-custom-primitives/: README.md  config.yaml  create_data.py  custom_primitives.py  run_example.py  tutorial.ipynb
examples/05-categoricals-output/: README.md  config.yaml  create_data.py  run_example.py  tutorial.ipynb
examples/06-graph-text-bridge/: README.md  config.yaml  create_data.py  run_example.py  tutorial.ipynb
featurizer/: README.org  __init__.py  __main__.py  arrow.py  boundary.py  categoricals.py  cli.py  executor.py  featurizer.py  featurizer.yaml  imputation.py  manifest.py  planner.py  sharding.py  sql.py  test.yaml  test2.yaml  test3.yaml  validation.py
featurizer/bridge/: __init__.py  base.py  centrality.py  changepoint.py  community.py  edges.py  embeddings.py  graph.py  nlp.py  sequence.py  text.py  trajectory.py
featurizer/primitives/: __init__.py  abstractions.py  aggregations.py  preagg.py  transformations.py  utils.py
featurizer/viz/: __init__.py  _utils.py  correlation.py  distributions.py  importance.py  missing.py  similarity.py  temporal.py
site/: check_links.py  gen.py  index.html
site/explorables/: phi-dfs.html
specs/: advanced-aggregator-hardening.html  correlated-subquery-aggregator-scaling.html  feature-materialization-performance.html  fix-relationship-identity-and-manifest.html  github-pages-docs-hub.html  incorporating-text-graph-feature-families.html  live-db-revalidation-v060.html  live-db-revalidation-v080.html  live-db-revalidation-v100.html  reduce-child-stream-fanout-p3.html  v1-hardening-and-api-freeze.html  wide-primitive-sql-fixes-and-per-db-artifacts.html
specs/correlated-subquery-aggregator-scaling/: after-10k.html  after-10k.json  baseline-100.html  baseline-100.json  baseline-10k.html  baseline-10k.json  baseline-1k.html  baseline-1k.json  explain-1k-mean_deviation.json  explain-1k-trimmed_mean_10.json  scaling-before-after.html
specs/live-db-revalidation-v060/: chicago311.html  dirtyduck.html  donorschoose.html
specs/live-db-revalidation-v080/: chicago311.html  dirtyduck.html  donorschoose.html
specs/live-db-revalidation-v100/: chicago311.html  dirtyduck.html  donorschoose.html
specs/wide-primitive-sql-fixes-and-per-db-artifacts/: chicago311.html  dirtyduck.html  donorschoose.html
src/styles/: custom.css
tests/: conftest.py  test_abstractions.py  test_arrow_imputation.py  test_bridge.py  test_bridge_changepoint.py  test_bridge_edges.py  test_bridge_graph.py  test_bridge_multicolumn.py  test_bridge_nlp.py  test_bridge_trajectory.py  test_categoricals.py  test_config_validation.py  test_executor_tuning.py  test_fanout_budget.py  test_featurizer.py  test_graph_features.py  test_graph_neighbour_pass.py  test_imputation.py  test_integration.py  test_manifest.py  test_manifest_lineage.py  test_parallel_relationships.py  test_planner_sql_validity.py  test_preagg_shape.py  test_primitive_selection.py  test_primitives_utils.py  test_relationship_keys.py  test_sharding.py  test_site_gen.py  test_sql_snapshot.py  test_to_tables_row_width.py  test_validation.py  test_viz.py
tests/fixtures/: preagg_golden_values.json  sample_config.yaml  sample_config_snapshot.yaml
tests/integration/: _harness.py  _realistic.py  conftest.py  test_all_aggregators_execution.py  test_arrow_export.py  test_bridge.py  test_bridge_families.py  test_default_primitives_execution.py  test_direct_categoricals.py  test_graph_neighbour_pass.py  test_impute_with_materialization.py  test_manifest_sharding_guard.py  test_manifest_table.py  test_preagg_value_equality.py  test_realistic_donorschoose.py  test_realistic_food_inspections.py  test_realistic_peer_groups.py  test_realistic_seeding.py  test_realistic_spatial.py  test_relationship_topologies.py  test_sharding.py  test_sql_execution.py  test_to_tables_row_width.py  test_wide_primitive_execution.py
tests/primitives/: test_asof_aggregations.py  test_causal_safety.py  test_distribution_aggregators.py  test_drift_aggregations.py  test_long_feature_names.py  test_long_transformer_names.py  test_m1c_sequence_aggregations.py  test_new_aggregations.py  test_phase4_transformers.py  test_phase5_aggregations.py  test_predicate_aggregations.py  test_registries.py  test_scaled_name_collisions.py  test_spatial_aggregations.py  test_temporal_epoch_primitives.py  test_text_transformers.py  test_transformations.py
tests/snapshots/: sample_featurizer.sql
(+34 files in other folders)
