[project]
name = "featurizer"
version = "0.1.1"
description = "DFS implementation for PostgreSQL temporal datasources"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Adolfo De Unánue", email = "adolfo+git@unanue.mx" }]
keywords = [
  "feature-engineering",
  "deep-feature-synthesis",
  "dfs",
  "postgresql",
  "sql",
  "machine-learning",
  "temporal",
  "feature-store",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "icecream",
  "loguru",
  "pandas",
  "psycopg",
  "pyyaml",
  "records",
]

[project.urls]
Homepage = "https://github.com/nanounanue/featurizer"
Repository = "https://github.com/nanounanue/featurizer"
Issues = "https://github.com/nanounanue/featurizer/issues"

[project.optional-dependencies]
viz = [
  "matplotlib>=3.5",
  "seaborn>=0.12",
  "plotly>=5",
  "networkx>=3",
  "scipy>=1.8",
  "scikit-learn>=1.0",
  "umap-learn>=0.5",
]
# The phi-bridge precompute companion (featurizer/bridge/). Heavy, optional
# per-modality deps; the SQL spine never imports these.
bridge = [
  "scikit-learn>=1.0",
  "networkx>=3",
  "sentence-transformers>=2.2",
  "pgvector>=0.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "jupyter-console>=6.6.3",
    "pytest>=8.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["featurizer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/primitives/aggregations.py",  # Extensive primitive variants
    "*/primitives/transformations.py",  # Extensive primitive variants
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["featurizer"]
