[project]
name = "featurizer"
version = "0.9.1"
description = "DFS implementation for PostgreSQL temporal datasources"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Adolfo De Unánue", email = "adolfo+git@unanue.mx" }]
keywords = [
  "feature-engineering",
  "deep-feature-synthesis",
  "dfs",
  "postgresql",
  "sql",
  "machine-learning",
  "temporal",
  "feature-store",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "icecream",
  "loguru",
  "pandas",
  "psycopg",
  "pyyaml",
  "records",
]

[project.urls]
Homepage = "https://github.com/ccd-ia/featurizer"
Repository = "https://github.com/ccd-ia/featurizer"
Issues = "https://github.com/ccd-ia/featurizer/issues"

[project.optional-dependencies]
viz = [
  "matplotlib>=3.5",
  "seaborn>=0.12",
  "plotly>=5",
  "networkx>=3",
  "scipy>=1.8",
  "scikit-learn>=1.0",
  "umap-learn>=0.5",
]
# The phi-bridge precompute companion (featurizer/bridge/). Heavy, optional
# per-modality deps; the SQL spine never imports these.
bridge = [
  "scikit-learn>=1.0",
  "networkx>=3",
  "sentence-transformers>=2.2",
  "pgvector>=0.2",
  # 0.9.0 text/graph families. spaCy models are separate downloads
  # (`python -m spacy download xx_ent_wiki_sm`); the dependency-free NLP
  # bridges (sentiment/readability/language-id) need none of these.
  "spacy>=3.7",
  "python-louvain>=0.16",
  # 0.9.1: MinHash/LSH for NearDuplicateEdgeBridge.
  "datasketch>=1.6",
]
parquet = [
    "pyarrow>=24.0.0",
]

[dependency-groups]
# Python side of the docs-site build (site/gen.py): notebook -> markdown
# conversion (nbconvert) and the auto-generated API reference (pdoc, emitted as
# self-contained HTML into public/api/). The site itself is built by Astro
# Starlight (package.json).
docs = [
    "nbconvert>=7.16",
    "pdoc>=15",
]
dev = [
    "basedpyright>=1.31.7",
    "jupyter-console>=6.6.3",
    # pyarrow is a RUNTIME-optional dep (the [parquet] extra), but the type
    # checker needs it to resolve the Arrow signatures (arrow.py / imputation.py).
    # Keeping it in the dev group means `uv sync` type-checks clean without the
    # runtime extra; end users still gate Arrow features behind featurizer[parquet].
    "pyarrow>=24.0.0",
    # networkx + python-louvain are RUNTIME-optional ([bridge] extra), but they
    # are lightweight and the graph-bridge tests (test_bridge_graph.py) execute
    # real centralities/partitions — dev-group presence means those tests run
    # (not skip) under plain `uv sync`, locally and in CI. The heavy bridge
    # deps (torch via sentence-transformers, spaCy) stay extra-only.
    "networkx>=3",
    "python-louvain>=0.16",
    # datasketch (numpy-only, small) likewise: the near-duplicate edge tests
    # execute rather than skip under plain `uv sync`.
    "datasketch>=1.6",
    "pytest>=8.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["featurizer"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/primitives/aggregations.py",  # Extensive primitive variants
    "*/primitives/transformations.py",  # Extensive primitive variants
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["featurizer"]
